--- a/HTML/Tuesday/Layout.html
+++ b/HTML/Tuesday/Layout.html
@@ -13,7 +13,7 @@
     <div class = "side bar" style="background-color:pink;width:30%;padding-top: 300px; padding-bottom:300px; display:inline-block">
         sidebar
     </div>
-    <div class = "main content" style = "background-color: blue;width: 1328px; display:inline-block; padding-top:300px; padding-bottom:300px">
+    <div class = "main content" style = "background-color: blue;width: 69.7%; display:inline-block; padding-top:300px; padding-bottom:300px">
         main content
     </div>
     <div class = "footer" style = "background-color:yellow; padding: 100px">
